# NLP

./: .env.example  .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  pytest.xml
.github/workflows/: workflow.yml
data/OneStopEnglishCorpus/: Sentence-Aligned.pkl  Texts-Together-OneCSVperFile.pkl
docs/: Exposé.tex  references.bib
docs/exposé/: Exposé.tex  references.bib
docs/report/: TODO list.txt  dsbda-handbook.tex  dsbda-paper.tex  dsbda-references.bib  dsbda-style.sty  mathcommands.tex  report.tex  tex.vim
runs/: latest.txt
runs/run_001/: scores.json
runs/run_002/: scores.json
scripts/: run_llm_zero_shot.sh  run_llm_zero_shot.slurm
src/: Bleu.py  config.py  main.py  prompts.py  rouge.py
src/data/: dataset_loader.py  import-asset.py  import-wikismall.py  newsela_corpus.py  newsela_loader.py  one_stop_english_corpus.py  onestop_loader.py  simple_ppdb.py  wikilarge_loader.py  wikismall_loader.py
src/evaluation/: checkpoint_compare.py  classical_evaluate.py  classical_simplifier.py  datasetStats.py  evaluate.py  file_writer.py  information_loss.py  metrics_builder.py  prediction_analysis.py  result_aggregation.py  result_visualization.py
src/metrics/: Bleu.py  COMMANDS.md  f1.py  (+5 more)
tests/: test_baseline_pipeline.py  test_bleu.py  test_create_run_dir.py  test_experiment_cli.py  test_f1.py  test_flesch_kincaid.py  test_import_smoke.py  test_llm_zero_shot_pipeline.py  test_metric_sari.py  test_metrics_builder.py  test_result_aggregation.py  test_result_visualization.py  test_rouge.py  test_sari_asset_pipeline.py  test_simple_ppdb.py
(+44 files in other folders)
